<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/logo_list"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/where"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/header"
        android:textColor="@color/mainColor"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintLeft_toRightOf="@id/logo_list"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_newItem_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/tv_add"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_list"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/street_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_newItem_header"
        android:id="@+id/gpsView"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_newItem_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/gpsView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_newItem_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tv_stuff"
            android:textColor="@color/mainColor"
            android:fontFamily="@font/quicksand"
            android:textSize="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_newItem_person_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_newItem_name_input"
        android:layout_margin="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_newItem_person_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tv_lent"
            android:textColor="@color/mainColor"
            android:fontFamily="@font/quicksand"
            android:textSize="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_newItem_phoneNumber_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_newItem_name_input"
        android:layout_margin="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_newItem_phoneNumber_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tv_phone"
            android:textColor="@color/mainColor"
            android:fontFamily="@font/quicksand"
            android:textSize="20dp"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_date"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/quicksand"
        android:text="@string/tv_date"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_newItem_person_input"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_textDate"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/button_date"
        app:layout_constraintTop_toTopOf="@id/button_date"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_textTime"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/button_date"
        app:layout_constraintTop_toBottomOf="@id/tv_textDate"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
    />


    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/mainColor"
        app:strokeWidth="1dp"
        app:strokeColor="@color/mainColor"
        android:fontFamily="@font/quicksand"
        android:text="Save"
        android:layout_marginBottom="30dp"
        android:id="@+id/saveItemBtn"
        />







</androidx.constraintlayout.widget.ConstraintLayout>