<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/mainColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/bacground"
        />


    <ImageView
        android:id="@+id/wave_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintTop_toBottomOf="@id/bacground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="254dp" />

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/logo_white"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLogo" />

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@id/wave_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/mainColor"
        android:text="@string/add_button"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/viewButton"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:backgroundTint="@null"
        android:text="@string/view_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/mainColor"
        app:strokeWidth="1dp"
        app:strokeColor="@color/mainColor"
        android:fontFamily="@font/quicksand"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/viewMapButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewButton"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/mainColor"
        app:strokeWidth="1dp"
        app:strokeColor="@color/mainColor"
        android:fontFamily="@font/quicksand"
        android:text="view map"

        />






</androidx.constraintlayout.widget.ConstraintLayout>